<resources>
    <string name="app_name">TimCoffee</string>
    <string name="_30_000">30.000</string>
    <string name="_20_000">20.000</string>
    <string name="add_to_cart">add to cart</string>
    <string name="find_the_best">Find The Best</string>
    <string name="coffee_for_you">Coffee for you</string>
    <string name="americano">Americano</string>
    <string name="cafe_latte">Cafe Latte</string>
    <string name="cappucino">Cappucino</string>
    <string name="_22_000">22.000</string>
    <string name="vanilla_latte">Vanilla latte</string>
    <string name="caramel_latte">Caramel latte</string>
    <string name="_25_000">25.000</string>
    <string name="hazelnut_latte">Hazelnut latte</string>
    <string name="creme_brulee">Creme Brulee</string>
    <string name="kosu_gula_aren">Kosu gula aren</string>
    <string name="_18_000">18.000</string>
    <string name="single_origin">Single origin</string>
    <string name="piccolo_coffee">Piccolo Coffee</string>
    <string name="macchiato">Macchiato</string>
    <string name="cafe_mocha">Cafe mocha</string>
    <string name="_27_000">27.000</string>
    <string name="almondmilk">Almondmilk</string>
    <string name="frappuccino">Frappuccino</string>
    <string name="_23_000">23.000</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_success">Order Success</string>

    <!--    Login Activity-->
    <string name="username">Nomer HP / Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="belumPunyaAkun">Belum punya akun? Daftar</string>
    <string name="register">Daftar</string>

    <!--    SignUp Activity-->
    <string name="name">Nama</string>
    <string name="noHp">Nomer Handphone</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Konfirmasi Password</string>
    <string name="sudahPunyaAkun">Sudah punya akun? Login</string>

    <!-- Main Activity  -->
    <string name="goodMorning">Good Morning</string>
    <string name="goodAfternoon">Good Afternoon</string>
    <string name="goodEvening">Good Evening</string>
    <string name="mondayQuote">May your coffee be strong and your monday be short</string>
    <string name="tuesdayQuote">Tuesday isn\'t so bad... it\'s a sign that i\'ve somehow survived monday</string>
    <string name="wednesdayQuote">It is wellness wednesday. Take care yourself, stay refreshed, and stress less</string>
    <string name="thursdayQuote">Happy thursday, one small positive thought in the morning can change your whole day</string>
    <string name="fridayQuote">It\'s friday morning mankind! Good vibe, don\'t frown and let the monster see you smile</string>
    <string name="weekendQuote">Better days coming they\'re called saturday and sunday</string>
    <string name="dayWeekNumberFormat">u</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="drawer_start">drawer_start</string>
    <string name="drawer_close">drawer_close</string>
    <string name="informasi_pembayaran">Informasi pembayaran</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="activate_booking_order">Activate booking order</string>
    <string name="informasi_antrian">Informasi Antrian</string>
    <string name="please_order_our_product">Please Order Our Product</string>

</resources>