<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_Home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/item_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>

    <item
        android:id="@+id/item_order"
        android:title="Order"
        android:icon="@drawable/ic_baseline_timer_24"/>

    <item
        android:id="@+id/item_aboutUs"
        android:title="@string/about_us"
        android:icon="@drawable/ic_baseline_info_24"/>

    <item
        android:id="@+id/item_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_subdirectory_arrow_left_24"/>

</menu>