<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:background="@color/bg_timcoffee"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_LoginLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="150dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_LoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/login"
                android:textColor="@color/bg_main_timcoffee"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/et_LoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_LoginTitle"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="24dp"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_LoginUsername"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_Login"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/tv_LoginSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:text="@string/belumPunyaAkun"/>

    </LinearLayout>

</ScrollView>