<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1E1E0"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/burger_menu"></ImageView>

            <TextView
                android:id="@+id/txtbanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/find_the_best"
                android:textColor="#023E4A"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txtbanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/coffee_for_you"
                android:textColor="#023E4A"
                android:textSize="24sp"/>

        </RelativeLayout>

        <GridLayout
            android:layout_marginTop="50dp"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink1"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/americano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_25_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                    <Button
                        android:id="@+id/add_to_cart1"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink2"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/cafe_latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_20_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/add_to_cart2"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink3"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/cappucino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_22_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/add_to_cart3"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink4"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/vanilla_latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_20_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/add_to_cart4"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink5"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/caramel_latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_25_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/add_to_cart5"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:src="@drawable/drink6"
                        android:layout_width="88dp"
                        android:layout_height="88dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/hazelnut_latte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#023E4A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/_30_000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/add_to_cart6"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/bg_main_timcoffee"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_to_cart"
                        android:shadowRadius="5"
                        android:textColor="#fff"
                        android:padding="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>