<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/logo"></ImageView>

        <TextView
            android:id="@+id/tv_cartInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/informasi_pembayaran"
            android:textColor="#023E4A"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rl_title"
        android:background="#023E4A"
        android:id="@+id/v_lineTitle"/>

    <LinearLayout
        android:id="@+id/ll_cart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/v_lineTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#023E4A"/>

        <CheckBox
            android:id="@+id/cb_bookingOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/activate_booking_order"
            android:textColor="#023E4A" />

        <LinearLayout
            android:id="@+id/ll_bookingOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="30dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#023E4A"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Booking Time : "/>

            <TextView
                android:id="@+id/tv_selectOrderTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="HH:mm aa"
                android:textSize="20sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_cartNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Add Note"
            android:minHeight="100dp"/>

        <LinearLayout
            android:id="@+id/ll_cartTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total : "
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#023E4A"/>
            
            <TextView
                android:id="@+id/tv_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#023E4A"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_cartPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_button"
            android:text="Pay"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_noCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v_lineTitle"
        android:text="@string/your_cart_is_empty"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:visibility="gone"/>

</RelativeLayout>